# gz-claude

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/plans/: 2026-02-03-etapa-0-bootstrap.md  2026-02-03-etapa-1-config.md  2026-02-03-etapa-2-git.md  2026-02-03-etapa-3-tui.md  2026-02-03-etapa-4-zellij.md  2026-02-03-gz-claude-design.md
src/: cli.rs  error.rs  main.rs
src/config/: mod.rs  tests.rs
src/git/: mod.rs  tests.rs
src/session/: mod.rs
src/tui/: app.rs  file_tree.rs  mod.rs  runner.rs  terminal.rs
src/tui/views/: command_bar.rs  file_browser.rs  mod.rs  projects.rs  workspaces.rs
src/zellij/: check.rs  commands.rs  layout.rs  mod.rs  web.rs
tests/: cli_test.rs
