[package]
name = "gz-claude"
version = "0.1.0"
edition = "2021"
description = "TUI for orchestrating Zellij workspaces with Claude Code"
authors = ["waabox"]
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Config (Etapa 1)
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# TUI (Etapa 3)
ratatui = "0.29"
crossterm = "0.28"

# Git (Etapa 2)
git2 = "0.19"

# Async (Etapa 4)
tokio = { version = "1.43", features = ["full"] }

# Directories
dirs = "6.0"

[dev-dependencies]
tempfile = "3.15"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
strip = true
