[package]
name = "gz-claude"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "TUI for orchestrating Zellij workspaces with Claude Code"
authors = ["waabox"]
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI (Stage 3)
ratatui = "0.30"
crossterm = "0.29"

# Git (Stage 2)
git2 = "0.20"

# Async (Stage 4)
tokio = { version = "1.49", features = ["full"] }

# Directories
dirs = "6.0"


[dev-dependencies]
tempfile = "3.15"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
strip = true
